--- a/ITW_MobileAppService/Web.config
+++ b/ITW_MobileAppService/Web.config
@@ -8,7 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ITW_MobileAppService-20160202063925.mdf;Initial Catalog=aspnet-ITW_MobileAppService-20160202063925;Integrated Security=True;MultipleActiveResultSets=True"
+    <add name="ITW-EventDatabase" connectionString="Data Source=tcp:itwcip-mobileserver.database.windows.net,1433;Initial Catalog=ITWCIP-Events;User ID=itwcip@itwcip-mobileserver;Password=Tntech2016"
       providerName="System.Data.SqlClient" />
     <!-- For Visual Studio 2013 / SQL Express Local DB 2012 replace the above with this setting
     <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ITW_MobileAppService-20160202063925.mdf;Initial Catalog=aspnet-ITW_MobileAppService-20160202063925;Integrated Security=True;MultipleActiveResultSets=True"
