--- a/ITW_MobileAppService/ITW_MobileAppService.csproj
+++ b/ITW_MobileAppService/ITW_MobileAppService.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Startup.MobileApp.cs" />
+    <Compile Include="Controllers\EmployeeLoginItemController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DataObjects\DatabaseItemTypes.cs" />
